# chat_app_system

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose-main.yaml
ansible/: README.md  ansible.cfg  inventory  main.yml
argocd/: application.yaml
backend/: README.md
backend/services/account/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/services/account/alembic/: env.py
backend/services/account/alembic/versions/: f09a92a37aab_create_users_and_account.py
backend/services/account/api/v1/router/: account.py  users.py
backend/services/account/config/: setting.py
backend/services/account/controller/: account.py  auth.py  users.py
backend/services/account/core/: build.py  setup.py  start.py
backend/services/account/docs/: conf.py  plugins.rst
backend/services/account/error/: exceptions.py
backend/services/account/handlers/: exceptions.py
backend/services/account/interfaces/: account.py  builder.py  factory.py  users.py
backend/services/account/models/: __init__.py  account.py  users.py
backend/services/account/plugins/: producer.py  redis.py
backend/services/account/schemas/: account.py  error.py  users.py
backend/services/account/scripts/: startup.sh
backend/services/account/tests/: conftest.py  test_data.py
backend/services/account/tests/functional/: test_user_process.py
backend/services/account/tests/unit/operations/: test_account_operations.py  test_users_operations.py
backend/services/account/tests/unit/routes/: test_route_account.py  test_route_users.py
backend/services/account/utils/: password.py  session.py  sql.py
(+160 files in other folders)
